minio/400-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: minio
  name: minio
  labels:
    app: minio

spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:${MINIO_VERSION}
          args: ['server', '/data', '--console-address', ':9001']
          ports:
            - name: minio
              containerPort: 9000
          volumeMounts:
            - name: s3-pv-storage
              mountPath: /data
      volumes:
        - name: s3-pv-storage
          persistentVolumeClaim:
            claimName: s3-pvc
