minio/500-ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-s3
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: ${MINIO_FQDN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
  tls:
    - secretName: ${MINIO_TLS_SECRET}
      hosts:
        - ${MINIO_FQDN}
