minio/550-ingess-console.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console-minio-s3 
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: ${MINIO_CONSOLE_FQDN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9001
  tls:
    - secretName: ${MINIO_CONSOLE_TLS_SECRET}
      hosts:
        - ${MINIO_CONSOLE_FQDN}
